gke/deployment.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

# This file configures the API components autotest CI application frontend.
# The frontend serves public web traffic.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: awc-frontend
  labels:
    app: awc-www
spec:
  selector:
    matchLabels:
      app: anypoint-web-components
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: anypoint-web-components
        tier: frontend
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: awc-www-key
      containers:
      - name: awc-www
        image: gcr.io/anypoint-wc/awc-www:0.1.8
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
