gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awc-www-service
spec:
  type: NodePort
  selector:
    app: anypoint-web-components
    tier: frontend
  ports:
  - name: www-port
    protocol: TCP
    port: 60001
    targetPort: 50001
